<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.P04CalculadoraMD.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.P04CalculadoraMD.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="#947D7D80"
        tools:context=".p04CalculadoraMD"
        tools:layout_editor_absoluteX="-67dp"
        tools:layout_editor_absoluteY="-2dp">

        <Button
            android:id="@+id/butC"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="#E224B0E8"
            android:text="@string/butC"
            android:textColor="#000000"
            android:onClick="butC"
            app:layout_constraintBottom_toTopOf="@+id/but7"
            app:layout_constraintEnd_toEndOf="@+id/but7" />

        <Button
            android:id="@+id/butPorcentaje"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#E224B0E8"
            android:text="@string/butResto"
            android:textColor="#000000"
            android:onClick="butPorcentaje"
            app:layout_constraintBottom_toBottomOf="@+id/butAC"
            app:layout_constraintEnd_toEndOf="@+id/but9"
            app:layout_constraintStart_toStartOf="@+id/but9"
            app:layout_constraintTop_toTopOf="@+id/butAC" />

        <Button
            android:id="@+id/butAC"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#E224B0E8"
            android:text="@string/butAC"
            android:textColor="#000000"
            android:onClick="butAC"
            app:layout_constraintBottom_toBottomOf="@+id/butC"
            app:layout_constraintEnd_toEndOf="@+id/but8"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/but8"
            app:layout_constraintTop_toTopOf="@+id/butC" />

        <Button
            android:id="@+id/butDividir"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#E224B0E8"
            android:text="@string/butDividir"
            android:textColor="#000000"
            android:onClick="butDividir"
            app:layout_constraintBottom_toBottomOf="@+id/butPorcentaje"
            app:layout_constraintEnd_toEndOf="@+id/butMultiplicar"
            app:layout_constraintStart_toStartOf="@+id/butMultiplicar"
            app:layout_constraintTop_toTopOf="@+id/butPorcentaje" />

        <Button
            android:id="@+id/but7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but7"
            android:textColor="#000000"
            android:onClick="but7"
            app:layout_constraintBottom_toTopOf="@+id/but4"
            app:layout_constraintEnd_toEndOf="@+id/but4" />

        <Button
            android:id="@+id/but8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but8"
            android:textColor="#000000"
            android:onClick="but8"
            app:layout_constraintBottom_toBottomOf="@+id/but7"
            app:layout_constraintEnd_toEndOf="@+id/but5"
            app:layout_constraintStart_toStartOf="@+id/but5"
            app:layout_constraintTop_toTopOf="@+id/but7" />

        <Button
            android:id="@+id/butMultiplicar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#E224B0E8"
            android:text="@string/butMultiplicar"
            android:textColor="#000000"
            android:onClick="butMultiplicar"
            app:layout_constraintBottom_toBottomOf="@+id/but9"
            app:layout_constraintEnd_toEndOf="@+id/butResta"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/butResta"
            app:layout_constraintTop_toTopOf="@+id/but9" />

        <Button
            android:id="@+id/but9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but9"
            android:textColor="#000000"
            android:onClick="but9"
            app:layout_constraintBottom_toBottomOf="@+id/but8"
            app:layout_constraintEnd_toEndOf="@+id/but6"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/but6"
            app:layout_constraintTop_toTopOf="@+id/but8"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/but4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but4"
            android:textColor="#000000"
            android:onClick="but4"
            app:layout_constraintBottom_toTopOf="@+id/but1"
            app:layout_constraintEnd_toEndOf="@+id/but1" />

        <Button
            android:id="@+id/but6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but6"
            android:textColor="#000000"
            android:onClick="but6"
            app:layout_constraintBottom_toBottomOf="@+id/but5"
            app:layout_constraintEnd_toEndOf="@+id/but3"
            app:layout_constraintStart_toStartOf="@+id/but3"
            app:layout_constraintTop_toTopOf="@+id/but5" />

        <Button
            android:id="@+id/but5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but5"
            android:textColor="#000000"
            android:onClick="but5"
            app:layout_constraintBottom_toBottomOf="@+id/but4"
            app:layout_constraintStart_toEndOf="@+id/but4"
            app:layout_constraintTop_toTopOf="@+id/but4" />

        <Button
            android:id="@+id/butResta"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#E224B0E8"
            android:text="@string/butResta"
            android:textColor="#000000"
            android:onClick="butResta"
            app:layout_constraintBottom_toBottomOf="@+id/but6"
            app:layout_constraintEnd_toEndOf="@+id/butSuma"
            app:layout_constraintStart_toStartOf="@+id/butSuma"
            app:layout_constraintTop_toTopOf="@+id/but6" />

        <Button
            android:id="@+id/but1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but1"
            android:textColor="#000000"
            android:onClick="but1"
            app:layout_constraintBottom_toTopOf="@+id/but0"
            app:layout_constraintEnd_toEndOf="@+id/but0" />

        <Button
            android:id="@+id/but2"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but2"
            android:textColor="#000000"
            android:onClick="but2"
            app:layout_constraintBottom_toBottomOf="@+id/but1"
            app:layout_constraintEnd_toEndOf="@+id/butPunto"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/butPunto"
            app:layout_constraintTop_toTopOf="@+id/but1" />

        <Button
            android:id="@+id/butSuma"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#E224B0E8"
            android:text="@string/butSuma"
            android:textColor="#000000"
            android:onClick="butSuma"
            app:layout_constraintBottom_toBottomOf="@+id/but3"
            app:layout_constraintEnd_toEndOf="@+id/butIgual"
            app:layout_constraintStart_toStartOf="@+id/butIgual"
            app:layout_constraintTop_toTopOf="@+id/but3" />

        <Button
            android:id="@+id/but3"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/but3"
            android:textColor="#000000"
            android:onClick="but3"
            app:layout_constraintBottom_toBottomOf="@+id/but2"
            app:layout_constraintEnd_toEndOf="@+id/butE"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/butE"
            app:layout_constraintTop_toTopOf="@+id/but2" />

        <Button
            android:id="@+id/butIgual"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#C82323"
            android:text="@string/butIgual"
            android:textColor="#000000"
            android:onClick="butIgual"
            app:layout_constraintBottom_toBottomOf="@+id/butE"
            app:layout_constraintStart_toEndOf="@+id/butE"
            app:layout_constraintTop_toTopOf="@+id/butE" />

        <Button
            android:id="@+id/butE"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/butE"
            android:textColor="#000000"
            android:onClick="butE"
            app:layout_constraintBottom_toBottomOf="@+id/butPunto"
            app:layout_constraintStart_toEndOf="@+id/butPunto"
            app:layout_constraintTop_toTopOf="@+id/butPunto" />

        <Button
            android:id="@+id/butPunto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="20dp"
            android:backgroundTint="#947D7D80"
            android:text="@string/butPunto"
            android:textColor="#000000"
            android:onClick="butPunto"
            app:layout_constraintBottom_toBottomOf="@+id/but0"
            app:layout_constraintStart_toEndOf="@+id/but0"
            app:layout_constraintTop_toTopOf="@+id/but0" />

        <Button
            android:id="@+id/but0"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="56dp"
            android:backgroundTint="#947D7D80"
            android:onClick="but0"
            android:text="@string/but0"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.834" />

        <TextView
            android:id="@+id/txtResultado"
            android:layout_width="360dp"
            android:layout_height="32dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="#83DD21"
            android:text=""
            android:textAlignment="textEnd"
            android:textColor="#000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.254" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="405dp"
            android:layout_height="71dp"
            android:layout_marginBottom="28dp"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/txtResultado"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        app:srcCompat="@android:drawable/ic_dialog_email" />


</androidx.coordinatorlayout.widget.CoordinatorLayout>